sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: not found: value O
  for (j<-O to getNombreValeurs()-i-2)
          ^